force-app/main/default/objects/Strategy_Line_Items__c/Strategy_Line_Items__c.object-meta.xml
<CustomObject>
    <label>Strategy Line Items</label>
    <nameField>
        <displayFormat>SLIN-{0}</displayFormat>
        <label>Strategy Line Items Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Strategy Line Items</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>