force-app/main/default/objects/Strategy_Line_Items__c/fields/Abatement_Strategies__c.field-meta.xml
<CustomField>
    <fullName>Abatement_Strategies__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Abatement Strategies</label>
    <referenceTo>Abatement_Strategies__c</referenceTo>
    <relationshipLabel>Strategy Line Items</relationshipLabel>
    <relationshipName>Strategy_Line_Items</relationshipName>
    <type>Lookup</type>
</CustomField>