force-app/main/default/objects/Strategy_Line_Items__c/fields/BudgetAmountForThePurchase__c.field-meta.xml
<CustomField>
    <fullName>BudgetAmountForThePurchase__c</fullName>
    <inlineHelpText>What is the Budget Amount for the Purchase?</inlineHelpText>
    <label>Budget Amount for the Purchase?</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>