force-app/main/default/objects/Strategy_Line_Items__c/fields/BudgetNarrative__c.field-meta.xml
<CustomField>
    <fullName>BudgetNarrative__c</fullName>
    <label>Budget Narrative</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>