force-app/main/default/objects/Strategy_Line_Items__c/fields/HowManyBoxesWillBePurchased__c.field-meta.xml
<CustomField>
    <fullName>HowManyBoxesWillBePurchased__c</fullName>
    <label>How many Boxes will be Purchased?</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>