force-app/main/default/objects/Strategy_Line_Items__c/fields/ImplementationPlanForTheStrategy__c.field-meta.xml
<CustomField>
    <fullName>ImplementationPlanForTheStrategy__c</fullName>
    <inlineHelpText>Provide a Description of How the Identified Strategy will be Implemented.</inlineHelpText>
    <label>Implementation plan for the Strategy</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>