force-app/main/default/objects/Strategy_Line_Items__c/fields/IsYourStrategyInitialContinuation__c.field-meta.xml
<CustomField>
    <fullName>IsYourStrategyInitialContinuation__c</fullName>
    <inlineHelpText>Identify if the Chosen Strategy is Initial or Continuation</inlineHelpText>
    <label>Is your Strategy Initial/Continuation?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Initial</fullName>
            </value>
            <value>
                <fullName>Continuation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>