force-app/main/default/objects/Strategy_Line_Items__c/fields/Name__c.field-meta.xml
<CustomField>
    <fullName>Name__c</fullName>
    <label>Name</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>