force-app/main/default/objects/Strategy_Line_Items__c/fields/ProvideTheOutcomeMeasures__c.field-meta.xml
<CustomField>
    <fullName>ProvideTheOutcomeMeasures__c</fullName>
    <label>Provide the Outcome Measures</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>