force-app/main/default/objects/Strategy_Line_Items__c/fields/ProvideTheProcessMeasures__c.field-meta.xml
<CustomField>
    <fullName>ProvideTheProcessMeasures__c</fullName>
    <label>Provide the Process Measures</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>