force-app/main/default/objects/Strategy_Line_Items__c/fields/WillTheseFundsBeUsedForNaloxone__c.field-meta.xml
<CustomField>
    <fullName>WillTheseFundsBeUsedForNaloxone__c</fullName>
    <inlineHelpText>Will these Funds be used to Purchase Naloxone?</inlineHelpText>
    <label>Will these funds be used for Naloxone?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>